@@ -20,9 +20,7 @@ import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -32,50 +30,62 @@ import java.util.stream.Collectors;
 public class CartServiceImpl implements CartService {
     CartRepository cartRepository;
     ProductClient productClient;
+
     // Constants
-    private static final BigDecimal FREE_SHIPPING_THRESHOLD = BigDecimal.valueOf(500000);
-    private static final BigDecimal SHIPPING_FEE = BigDecimal.valueOf(30000);
+    private static final BigDecimal FREE_SHIPPING_THRESHOLD = BigDecimal.valueOf(500_000);
+    private static final BigDecimal SHIPPING_FEE = BigDecimal.valueOf(30_000);
 
     @Override
     public Cart addToCart(AddToCartRequest request) {
-        log.info("Adding item to cart for user: {}; {}", request.getUserId(),request.getSellerId());
+        log.info("Adding item to cart for user: {}; {}", request.getUserId(), request.getSellerId());
 
         Cart cart = getOrCreateCart(request.getUserId());
-        ApiResponse<OrderItemProductResponse> productResponse = productClient.searchBySizeAndID(SearchSizeAndIDRequest.builder()
-                        .size(request.getSize())
-                        .id(request.getProductId())
-                .build());
-        CartItem newItem;
-            newItem = CartItem.builder()
-                    .productId(request.getProductId())
-                    .sellerId(request.getSellerId())
-                    .sellerName(request.getSellerName())
-                    .size(request.getSize())
-                    .unitPrice(productResponse.getResult().getPrice())
-                    .productImage(productResponse.getResult().getImage())
-                    .productName(productResponse.getResult().getName())
-                    .quantity(request.getQuantity())
-                    .build();
+
+        // Lấy thông tin sản phẩm/biến thể theo OPTIONS
+        ApiResponse<OrderItemProductResponse> productResponse =
+                productClient.searchBySizeAndID(
+                        SearchSizeAndIDRequest.builder()
+                                .id(request.getProductId())
+                                .options(request.getOptions())
+                                .build()
+                );
+        log.info("Product response: {}", productResponse.getResult());
+        if (productResponse == null || productResponse.getResult() == null) {
+            throw new AppException(ErrorCode.PRODUCT_NOT_FOUND);
+        }
+
+        OrderItemProductResponse p = productResponse.getResult();
+
+        CartItem newItem = CartItem.builder()
+                .productId(request.getProductId())
+                .sellerId(request.getSellerId())
+                .sellerName(request.getSellerName())
+                .options(request.getOptions())  // << sử dụng options
+                .unitPrice(p.getPrice())
+                .productImage(p.getImage())
+                .productName(p.getName())
+                .quantity(request.getQuantity())
+                .build();
 
         newItem.calculateTotalPrice();
         log.info("New item details: {}", newItem);
-        // Check if item already exists
+
+        // So khớp item trùng (cùng seller + product + options)
         String uniqueKey = newItem.getUniqueKey();
         Optional<CartItem> existingItem = cart.getItems().stream()
                 .filter(item -> item.getUniqueKey().equals(uniqueKey))
                 .findFirst();
 
         if (existingItem.isPresent()) {
-            // Update quantity
             CartItem existing = existingItem.get();
             existing.setQuantity(existing.getQuantity() + request.getQuantity());
-            existing.setProductImage(newItem.getProductImage()); // Cập nhật hình ảnh mới nhất
-            existing.setProductName(newItem.getProductName()); // Cập nhật tên sản phẩm mới nhất
-            existing.setSellerName(newItem.getSellerName()); // Cập nhật tên người bán mới nhất
+            // cập nhật info mới nhất
+            existing.setProductImage(newItem.getProductImage());
+            existing.setProductName(newItem.getProductName());
+            existing.setSellerName(newItem.getSellerName());
             existing.calculateTotalPrice();
             log.info("Updated existing item quantity to: {}", existing.getQuantity());
         } else {
-            // Add new item
             cart.getItems().add(newItem);
             log.info("Added new item to cart: {}", newItem.getProductId());
         }
@@ -87,7 +97,6 @@ public class CartServiceImpl implements CartService {
     @Override
     public Cart getCartByUserId(String userId) {
         log.info("Getting cart for user: {}", userId);
-
         return cartRepository.findByUserId(userId)
                 .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
     }
@@ -95,12 +104,12 @@ public class CartServiceImpl implements CartService {
     @Override
     public Cart getOrCreateCart(String userId) {
         log.info("Getting or creating cart for user: {}", userId);
-
         return cartRepository.findById(userId)
                 .orElse(Cart.builder()
                         .id(userId)
                         .userId(userId)
                         .createdAt(LocalDateTime.now())
+                        .items(new ArrayList<>()) // đảm bảo không null
                         .build());
     }
 
@@ -110,15 +119,16 @@ public class CartServiceImpl implements CartService {
 
         Cart cart = getCartByUserId(request.getUserId());
 
-        String uniqueKey = createUniqueKey(request.getSellerId(), request.getProductId(), request.getSize());
+        // UNIQUE theo options
+        String uniqueKey = createUniqueKey(request.getSellerId(), request.getProductId(), request.getOptions());
         CartItem item = cart.getItems().stream()
-                .filter(cartItem -> cartItem.getUniqueKey().equals(uniqueKey))
+                .filter(ci -> ci.getUniqueKey().equals(uniqueKey))
                 .findFirst()
-                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND ));
+                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
 
-        if (request.getQuantity() <= 0) {
+        if (request.getQuantity() == null || request.getQuantity() <= 0) {
             cart.getItems().remove(item);
-            log.info("Removed item from cart: {}", request.getQuantity());
+            log.info("Removed item from cart");
         } else {
             item.setQuantity(request.getQuantity());
             item.calculateTotalPrice();
@@ -130,13 +140,15 @@ public class CartServiceImpl implements CartService {
     }
 
     @Override
-    public Cart removeCartItem(String userId, String productId, String sellerId, String size) {
+    public Cart removeCartItem(String userId, String productId, String sellerId, Map<String,String> options) {
         log.info("Removing cart item for user: {}", userId);
 
         Cart cart = getCartByUserId(userId);
 
-        String uniqueKey = createUniqueKey(sellerId, productId, size);
-        boolean removed = cart.getItems().removeIf(item -> item.getUniqueKey().equals(uniqueKey));
+        // Tạo key duy nhất theo seller + product + options
+        String key = createUniqueKey(sellerId, productId, options == null ? Collections.emptyMap() : options);
+
+        boolean removed = cart.getItems().removeIf(item -> item.getUniqueKey().equals(key));
 
         if (!removed) {
             throw new AppException(ErrorCode.USER_NOT_FOUND);
@@ -146,14 +158,13 @@ public class CartServiceImpl implements CartService {
         return cartRepository.save(cart);
     }
 
+
     @Override
     public Cart clearCart(String userId) {
         log.info("Clearing cart for user: {}", userId);
-
         Cart cart = getCartByUserId(userId);
         cart.getItems().clear();
         cart.calculateTotals();
-
         return cartRepository.save(cart);
     }
 
@@ -163,7 +174,7 @@ public class CartServiceImpl implements CartService {
 
         Cart cart = getOrCreateCart(userId);
 
-        if (cart.getItems().isEmpty()) {
+        if (cart.getItems() == null || cart.getItems().isEmpty()) {
             return CartSummaryResponse.builder()
                     .totalItems(0)
                     .totalSellers(0)
@@ -177,7 +188,7 @@ public class CartServiceImpl implements CartService {
                     .build();
         }
 
-        // Group items theo seller
+        // group theo seller
         Map<String, List<CartItem>> itemsBySeller = cart.getItems().stream()
                 .collect(Collectors.groupingBy(CartItem::getSellerId));
 
@@ -186,16 +197,19 @@ public class CartServiceImpl implements CartService {
                     String sellerId = entry.getKey();
                     List<CartItem> items = entry.getValue();
 
-                    // Tính subtotal của seller
+                    // subtotal theo seller
                     BigDecimal sellerSubtotal = items.stream()
                             .map(CartItem::getTotalPrice)
+                            .filter(Objects::nonNull)
                             .reduce(BigDecimal.ZERO, BigDecimal::add);
 
                     boolean freeShipping = sellerSubtotal.compareTo(FREE_SHIPPING_THRESHOLD) >= 0;
                     BigDecimal shippingFee = freeShipping ? BigDecimal.ZERO : SHIPPING_FEE;
-                    BigDecimal amountForFreeShipping = freeShipping ? BigDecimal.ZERO :
-                            FREE_SHIPPING_THRESHOLD.subtract(sellerSubtotal);
-                    // Map từng CartItem thành CartItemSummaryResponse
+                    BigDecimal amountForFreeShipping = freeShipping
+                            ? BigDecimal.ZERO
+                            : FREE_SHIPPING_THRESHOLD.subtract(sellerSubtotal);
+
+                    // map từng item (KHÔNG còn field size)
                     List<CartItemSummaryResponse> itemSummaries = items.stream()
                             .map(i -> CartItemSummaryResponse.builder()
                                     .productId(i.getProductId())
@@ -204,20 +218,24 @@ public class CartServiceImpl implements CartService {
                                     .productImage(i.getProductImage())
                                     .unitPrice(i.getUnitPrice())
                                     .totalPrice(i.getTotalPrice())
-                                    .size(i.getSize())
+                                    .options(i.getOptions())   // chỉ trả về options
                                     .build()
                             )
                             .toList();
 
+                    String sellerName = (items.isEmpty() || items.get(0).getSellerName() == null)
+                            ? "Unknown seller"
+                            : items.get(0).getSellerName();
+
                     return SellerSummaryResponse.builder()
                             .sellerId(sellerId)
-                            .sellerName(items.get(0).getSellerName()) // TODO: call seller-service nếu cần
+                            .sellerName(sellerName)
                             .itemCount(items.size())
                             .subtotal(sellerSubtotal)
                             .shippingFee(shippingFee)
                             .freeShipping(freeShipping)
                             .amountForFreeShipping(amountForFreeShipping)
-                            .items(itemSummaries)   // 👈 add items
+                            .items(itemSummaries)
                             .build();
                 })
                 .toList();
@@ -229,10 +247,14 @@ public class CartServiceImpl implements CartService {
         return CartSummaryResponse.builder()
                 .totalItems(cart.getTotalItems())
                 .totalSellers(itemsBySeller.size())
-                .subtotal(cart.getSubtotal())
+                .subtotal(cart.getSubtotal() == null ? BigDecimal.ZERO : cart.getSubtotal())
                 .totalShipping(totalShipping)
-                .totalDiscount(cart.getTotalDiscount())
-                .finalAmount(cart.getSubtotal().add(totalShipping).subtract(cart.getTotalDiscount()))
+                .totalDiscount(cart.getTotalDiscount() == null ? BigDecimal.ZERO : cart.getTotalDiscount())
+                .finalAmount(
+                        (cart.getSubtotal() == null ? BigDecimal.ZERO : cart.getSubtotal())
+                                .add(totalShipping)
+                                .subtract(cart.getTotalDiscount() == null ? BigDecimal.ZERO : cart.getTotalDiscount())
+                )
                 .sellerSummaries(sellerSummaries)
                 .hasOutOfStockItems(false)
                 .canCheckout(true)
@@ -241,11 +263,9 @@ public class CartServiceImpl implements CartService {
     }
 
 
-
     @Override
     public int getCartItemCount(String userId) {
         log.info("Getting cart item count for user: {}", userId);
-
         return cartRepository.findByUserId(userId)
                 .map(Cart::getTotalItems)
                 .orElse(0);
@@ -261,26 +281,29 @@ public class CartServiceImpl implements CartService {
             throw new AppException(ErrorCode.USER_NOT_FOUND);
         }
 
-        // Tạo list uniqueKey từ request
+        // Tạo list uniqueKey từ request (đã chuyển sang OPTIONS)
         List<String> uniqueKeysToRemove = request.getItems().stream()
-                .map(item -> createUniqueKey(item.getSellerId(), item.getProductId(), item.getSize()))
-                .collect(Collectors.toList());
+                .map(item -> createUniqueKey(item.getSellerId(), item.getProductId(), item.getOptions()))
+                .toList();
 
-        // Xóa tất cả item matching uniqueKey trong list
-        boolean removedCount = cart.getItems().removeIf(item -> uniqueKeysToRemove.contains(item.getUniqueKey()));
-
-        if (!removedCount) {
+        boolean removedAny = cart.getItems().removeIf(ci -> uniqueKeysToRemove.contains(ci.getUniqueKey()));
+        if (!removedAny) {
             throw new AppException(ErrorCode.SELLER_NOT_FOUND);
         }
 
-        log.info("Removed {} items from cart", removedCount);
+        log.info("Removed batch items");
         cart.calculateTotals();
         return cartRepository.save(cart);
     }
 
-    private String createUniqueKey(String sellerId, String productId, String size) {
-        return (sellerId != null ? sellerId : "") + "-" +
-                productId + "-" +
-                (size != null ? size : "");
+    /* ================= Helpers ================= */
+
+    private String createUniqueKey(String sellerId, String productId, Map<String, String> options) {
+        CartItem tmp = CartItem.builder()
+                .sellerId(sellerId)
+                .productId(productId)
+                .options(options)
+                .build();
+        return tmp.getUniqueKey();
     }
 }
